--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         fill="white" />
     </svg>
     <div class="header__lang-links">
-      <a href="#" class="header__lang-link">Ru</a>
-      <a href="#" class="header__lang-link">En</a>
+      <a href="#" class="header__lang-link header__lang-link_enabled hover-link">Ru</a>
+      <a href="#" class="header__lang-link hover-link">En</a>
     </div>
   </header>
   <main>
@@ -139,7 +139,9 @@
     <section class="places">
       <div class="places__item">
         <h2 class="places__title">Куршская коса</h2>
-        <div class="places__link"><span>URL<br></span><a href="#">park-kosa.ru</a></div>
+        <div class="places__link"><span>URL<br></span><a target="_blank" class="hover-link"
+            href="http://park-kosa.ru">park-kosa.ru</a>
+        </div>
         <img class="places__image" src="images/places/kosa.png" alt="">
         <div class="places__description">
           <p class="places__text">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
@@ -158,7 +160,8 @@
       </div>
       <div class="places__item">
         <h2 class="places__title">Кольский</h2>
-        <div class="places__link"><span>URL<br></span><a href="#">National Geographic</a></div>
+        <div class="places__link"><span>URL<br></span><a target="_blank" class="hover-link"
+            href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a></div>
         <img src="images/places/kolsky.png" alt="" class="places__image">
         <div class="places__description">
           <p class="places__text">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг
@@ -174,7 +177,8 @@
       </div>
       <div class="places__item">
         <h2 class="places__title">Алтай</h2>
-        <div class="places__link"><span>URL<br></span><a href="#">Facebook</a></div>
+        <div class="places__link"><span>URL<br></span><a target="_blank" class="hover-link"
+            href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a></div>
         <img src="images/places/altai.png" alt="" class="places__image">
         <div class="places__description">
           <p class="places__text">Алтай — одно из красивейших мест в России.
@@ -189,7 +193,9 @@
       </div>
       <div class="places__item">
         <h2 class="places__title">Зимний Байкал</h2>
-        <div class="places__link"><span>URL<br></span><a href="#">https://vk.com/baikalmile</a></div>
+        <div class="places__link"><span>URL<br></span><a target="_blank" class="hover-link"
+            href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+        </div>
         <img src="images/places/baikal.png" alt="" class="places__image">
         <div class="places__description">
           <p class="places__text">Всем известен Байкал как крупнейшее озеро
@@ -204,7 +210,8 @@
       </div>
       <div class="places__item">
         <h2 class="places__title">Карелия</h2>
-        <div class="places__link"><span>URL<br></span><a href="#">http://vodlozero.ru/</a></div>
+        <div class="places__link"><span>URL<br></span><a target="_blank" class="hover-link"
+            href="http://vodlozero.ru">http://vodlozero.ru/</a></div>
         <img src="images/places/karelia.png" alt="" class="places__image">
         <div class="places__description">
           <p class="places__text">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница
@@ -218,8 +225,9 @@
       </div>
     </section>
     <section class="cover">
-      <img class="cover__background" src="images/cover/__background.png" alt="">
-      <div class="text">
+      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="hover-link">
+        <img class="cover__background" src="images/cover/__background.png" alt=""></a>
+      <div class="cover__text">
         <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
           электричках.
@@ -229,13 +237,13 @@
   </main>
   <footer class="footer">
     <ul class="footer__links">
-      <li><a href="#" class="footer__link">Карты</a></li>
-      <li><a href="#" class="footer__link">Погода</a></li>
-      <li><a href="#" class="footer__link">Расписание</a></li>
-      <li><a href="#" class="footer__link">Календарь</a></li>
-      <li><a href="#" class="footer__link">Путешествия</a></li>
+      <li><a href="https://yandex.ru/maps" target="_blank" class="footer__link hover-link">Карты</a></li>
+      <li><a href="https://yandex.ru/pogoda" target="_blank" class="footer__link hover-link">Погода</a></li>
+      <li><a href="https://rasp.yandex.ru" target="_blank" class="footer__link hover-link">Расписание</a></li>
+      <li><a href="https://calendar.yandex.ru" target="_blank" class="footer__link hover-link">Календарь</a></li>
+      <li><a href="https://travel.yandex.ru" target="_blank" class="footer__link hover-link">Путешествия</a></li>
     </ul>
-    <div class="footer__copyright">&copy;2020. Даниил Бушковский</div>
+    <div class="footer__copyright">&copy;2022. Даниил Бушковский</div>
   </footer>
 </body>
 
